# template-core

./: README.md  pyproject.toml
src/: README.md
