[project]
name = "app_name"
version = "0.1.0"
description = ""
authors = [
    { name = "Navaneethan Ghanti", email = "navaneethan.ghanti@gmail.com" }
]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
app_name = "app_name.__main__:main"